--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,6 @@ img {
   color: var(--main-txt-mode-dark);
   background-color: var(--button);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
   cursor: pointer;
 }
 
@@ -931,36 +930,36 @@ img {
   }
 }
 
-.address__list {
-  font-weight: 700;
+.adress__list {
+  line-height: 1.17;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 24px;
   letter-spacing: 0.03em;
 }
 
 @media screen and (min-width: 1200px) {
-  .address__list {
+  .adress__list {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
 }
 
-.address__item {
+.adress__item {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.address__item:last-child {
+.adress__item:last-child {
   margin-bottom: 0;
 }
 
-.address__map {
+.adress__map {
   color: var(--main-txt-mode-dark);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address__map:hover, .address__map:focus {
+.adress__map:hover, .adress__map:focus {
   color: var(--secondary-txt-mode-dark);
 }
 
@@ -1381,10 +1380,10 @@ img {
 @media screen and (max-width: 1119px) {
   .modal {
     position: relative;
-    min-width: 380px;
-    max-width: 450px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 450px;
+    max-width: calc(100% - 30px);
+    margin: 15px auto;
+    transform: scale(1);
   }
 }
 
@@ -1519,6 +1518,7 @@ img {
   border: 2px solid #212121;
   border-radius: 4px;
   margin-right: 9px;
+  flex-shrink: 0;
 }
 
 .form__link {
