--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -6,36 +6,46 @@
   @media screen and (min-width: 1200px) {
     padding-left: 10px;
   }
-  &__list {
-    @include font(700, 14px, 1.71, 0.03em);
+}
 
-    @media screen and (min-width: 1200px) {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  }
-  &__item {
-    margin-bottom: 10px;
-    text-align: center;
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-  &__map {
-    color: var(--main-txt-mode-dark);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-      color: var(--secondary-txt-mode-dark);
-    }
+.adress__list {
+  line-height: 1.17;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
+.adress__item {
+  margin-bottom: 10px;
+  text-align: center;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.adress__map {
+  color: var(--main-txt-mode-dark);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--secondary-txt-mode-dark);
+  }
+}
 .adress__mail,
 .adress__phone {
   color: var(--primary-txt-mode-dark);
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &:hover,
   &:focus {
     color: var(--secondary-txt-mode-dark);
