--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -98,7 +98,7 @@
   color: var(--main-txt-mode-dark);
   background-color: var(--button);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  // border-radius: 4px;
   cursor: pointer;
   &:hover,
   &:focus {
