--- a/sass/components/form/_modal.scss
+++ b/sass/components/form/_modal.scss
@@ -4,12 +4,13 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
   @media screen and (max-width: 1119px) {
     position: relative;
-    min-width: 380px;
-    max-width: 450px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 450px;
+    max-width: calc(100% - 30px);
+    margin: 15px auto;
+    transform: scale(1);
   }
   @media screen and (min-width: 1200px) {
     position: absolute;
